리팩토링 중

--- a/src/templates/editor.ejs
+++ b/src/templates/editor.ejs
@@ -111,7 +111,7 @@
             this.value === "python"
               ? `def solution():
         answer =0
-        return answer`
+        return answer` // python 기본 코드
               : this.value === "java"
               ? `class Solution {
         public int solution(int[] nums) {
@@ -120,8 +120,8 @@
             System.out.println("Hello Java");
 
             return answer;
-        }
-    }`
+        } 
+    }` //java 기본 코드
               : "",
           language: this.value,
           theme: "vs-dark",
